--- a/wp-content/themes/workingnyc/views/objects/ie-warning.twig
+++ b/wp-content/themes/workingnyc/views/objects/ie-warning.twig
@@ -7,7 +7,7 @@
     </div>
     <div class="c-alert__body">
       <p data-js-alert="text">
-      	{{ __('This site no longer supports the browser you’re using, Internet Explorer. Certain features, such as translation, may not work properly. Please consider trying a', 'WNYC')}} <a href="https://www.google.com/search?ei=GH89X6WoA5awytMPr7KdsAk&q=Best+Web+Browsers+List&oq=Best+Web+Browsers+List" target="_blank">{{ __('different browser', 'WNYC')}}</a> {{ __('or', 'WNYC')}} <a href="https://nycopportunity.formstack.com/forms/iesupport" target="_blank">{{ __('tell us why you use Internet Explorer.', 'WNYC')}}</a>.
+      	{{ options.internet_explorer}}
       </p>
     </div>
   </article>
