--- a/wp-content/themes/workingnyc/views/objects/newsletter.twig
+++ b/wp-content/themes/workingnyc/views/objects/newsletter.twig
@@ -1,6 +1,6 @@
 <section class="layout-content py-6 bg-scale-2" data-js="newsletter">
 	<div class="pt-2 pb-3 wrap">
-		<h2 class="h4 font-normal text-alt mt-0">Newsletter</h2>
+		<h2 class="h4 font-normal text-alt mt-0">{{ __('Newsletter', 'WNYC-Newsletter') }}</h2>
 		<form action="{{newsletter_link}}" id="mc-embedded-subscribe-form" method="post" novalidate="true">
 			<div
 				class="c-question c-question-single" id="a348d8b2ae03">
