--- a/wp-content/themes/workingnyc/views/components/questionnaire.twig
+++ b/wp-content/themes/workingnyc/views/components/questionnaire.twig
@@ -1,5 +1,5 @@
 {% if questionnaire_qs %}
-  <section data-aos="fade-up" data-aos-anchor-placement="top-bottom" id="answer-a-few-questions" data-post-type="{{questionnaire_post_type}}" data-post-threshold="{{questionnaire_threshold}}" v-cloak>
+  <section data-aos="fade-up" data-aos-anchor-placement="top-bottom" v-cloak>
     <p class="mb-5 text-center tablet:mb-3">
       <a class="btn btn-link btn-secondary font-secondary" href="#answer-a-few-questions">{{ __('Answer a question to get started', 'WNYC-Questionnaire') }}</a>
       <br class="tablet:hidden" />{{ __('or', 'WNYC-Questionnaire') }}
@@ -12,20 +12,21 @@
         </svg>
       </a>
     </p>
-    <form :action="'{{programs_archive}}'+query" class="c-card" data-js="validate-and-query" method="post">
+
+    <form :action="'{{programs_archive}}'+query" class="c-card" data-js="validate-and-query" method="post" id="answer-a-few-questions" data-post-type="{{questionnaire_post_type}}" data-post-threshold="{{questionnaire_threshold}}">
       <div class="c-card__body">
 
         {% for question in questionnaire_qs %}
           <fieldset {% if loop.index == 1 %}class="mb-2"{% else %}aria-hidden="true" class="hidden mt-3"{% endif %} data-taxonomy="{{question.questionnaire_taxonomy}}" field-key="{{loop.index}}">
-            {# <legend class="text-alt small">Question {{loop.index}}</legend> #}
             <div class="c-question">
-              <label class="c-question__label">{{question.questionnaire_question}}</label>
+              {% set question_name = question.questionnaire_question|lower|replace({' ':'-', '?':''})%}
+              <label class="c-question__label" for="{{question_name}}">{{question.questionnaire_question}}</label>
               <p>{{ __('Choose one for now. You can add later using filters.', 'WNYC-Questionnaire') }}</p>
               <div class="c-question__container">
-                <div class="select ">
-                  <select aria-controls="aria-c-schedules" data-js="toggle" name="population" v-model="checkedFilters[{{loop.index}}]">
+                <div class="select">
+                  <select aria-controls="aria-c-schedules" aria-labelledby="{{question_name}}" data-js="toggle" id="{{question_name}}" name="{{question_name}}" v-model="checkedFilters[{{loop.index}}]">
                     <option value="undefined" disabled>{{ __('Select an option', 'WNYC-Questionnaire') }}</option>
-                    <option  v-for="(term,index) in filters[{{loop.index - 1}}]" :value="term">v{ term.name }</option>
+                    <option v-for="(term,index) in filters[{{loop.index - 1}}]" :value="term" :title="'{{question.questionnaire_question}}' +' Option ' + (index + 1) + ' of ' + filters[{{loop.index - 1}}].length + ': ' + term.name">v{ term.name }</option>
                   </select>
                   <svg aria-hidden="true" class="select__graphic">
                     <use xlink:href="#select-wnyc-chevrons"></use>
@@ -36,7 +37,7 @@
           </fieldset>
         {% endfor %}
 
-        <div aria-hidden="true" id="aria-c-messaging">
+        <div id="aria-c-messaging">
           <article class="c-alert color-status-secondary mb-5" data-js="alert-success" v-if="(success || checkedFilters.length == (filters.length + 1)) && totalPosts > 0">
             <div class="c-alert__graphic">
               <svg aria-hidden="true" class="icon-wnyc-ui">
@@ -44,7 +45,7 @@
               </svg>
             </div>
             <div class="c-alert__body">
-              <p data-alert="text">
+              <p data-alert="text" aria-live="polite">
                 <span>{{ __('Got it! We found', 'WNYC-Questionnaire') }} <b>v{ totalPosts }</b> {{ __('programs matching your interest.', 'WNYC-Questionnaire') }}
               </p>
             </div>
@@ -56,7 +57,7 @@
               </svg>
             </div>
             <div class="c-alert__body">
-              <p data-alert="text">{{ __('For those choices, we suggest seeing', 'WNYC-Questionnaire') }}
+              <p data-alert="text" aria-live="polite">{{ __('For those choices, we suggest seeing', 'WNYC-Questionnaire') }}
                 <a href="{{programs_archive}}" tabindex="-1">{{ __('all programs available now.', 'WNYC-Questionnaire') }}</a>
                 {{ __('Add filters on the Programs page to find what’s right for you. To get updates on programs that match your interests, you can also', 'WNYC-Questionnaire') }}
                 <a href="/newsletter" tabindex="-1">{{ __('sign up for our newsletter.', 'WNYC-Questionnaire') }}</a>
@@ -71,7 +72,7 @@
               </svg>
             </div>
             <div class="c-alert__body">
-              <p data-alert="text">{{ __('Sorry, there was an error on our site. Please try again later.', 'WNYC-Questionnaire') }}</p>
+              <p data-alert="text" aria-live="polite">{{ __('Sorry, there was an error on our site. Please try again later.', 'WNYC-Questionnaire') }}</p>
             </div>
           </article>
         </div>
