adding leading text for announcement date

--- a/wp-content/themes/workingnyc/views/home.twig
+++ b/wp-content/themes/workingnyc/views/home.twig
@@ -62,7 +62,7 @@
               <svg aria-hidden="true" class="icon-wnyc-ui">
                 <use xlink:href="#icon-wnyc-ui-calendar"></use>
               </svg>
-              <span>{{announcement.post_date|date}}</span>
+              <span>{{ __('Posted on ', 'WNYC') }} {{announcement.post_date|date}}</span>
             </div>
 
           </div>
